Merge dev changes into main (#24)